# brain-finance-service

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_add_user_id_to_accounts.py  0001_initial_schema.py  0002_add_categories_table.py  ac2ba6ac4899_add_transfers_table.py
data/: backup.sql  migrate_investment_instruments.sql  reset.sql  restore.sql  seed-backup.sql  seed.sql
src/api/: app.py  config.py  dependencies.py  models.py  schemas.py
src/api/endpoints/: accounts.py  assets.py  categories.py  investments.py  transactions.py  transfers.py
tests/: conftest.py  test_accounts.py  test_assets.py  test_categories.py  test_investments.py  test_transactions.py  test_transfers.py
